free(load-balance) strategy round-robin

--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -476,7 +476,7 @@ proxy-groups:
 
   - name: "free(load-balance)"
     type: load-balance
-    strategy: consistent-hashing
+    strategy: round-robin
     use:    
       - Leon406/SubCrawler
     url: 'http://www.gstatic.com/generate_204'
