--- a/domestic.yaml
+++ b/domestic.yaml
@@ -64,3 +64,5 @@ payload:
   - DOMAIN-SUFFIX,dnsperf.com
   - DOMAIN-SUFFIX,perfops.net
   - DOMAIN-SUFFIX,ipleak.net
+# Web Proxy Auto-Discovery Protocol
+  - DOMAIN,wpad
