new ad jrect rule sets

--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -44,7 +44,8 @@ DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 
 [Rule]
 
-DOMAIN-SET,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite.list,REJECT
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite_Domain.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Surge/RuleSet/NeteaseMusic.list,网易云音乐
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Microsoft_domain.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Apple_domain.yaml,DIRECT
