--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -40,7 +40,6 @@ backup (Manual) = select,Cordcloud,use=true
 Bilibili国台 = select,DIRECT,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
 TikTok = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
 DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
-DST-PORT = select,✈️PROXY,DIRECT
 
 
 [Rule]
@@ -60,10 +59,7 @@ RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,DIRECT,no-resolve
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Telegram_ip.yaml,✈️PROXY,no-resolve
 GEOIP,CN,DIRECT
-DST-PORT,443,DST-PORT
-DST-PORT,22,DST-PORT
-DST-PORT,80,DST-PORT
-FINAL,DIRECT
+FINAL,✈️PROXY
 
 [Host]
 localhost = 127.0.0.1
