--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -354,7 +354,7 @@ proxy-groups:
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
-    filter: '香港|HK'
+    filter: '香港|hk|hong'
    #lazy: true
    #disable-udp: true
 
@@ -366,7 +366,7 @@ proxy-groups:
     interval: 300
     tolerance: 40
     lazy: true
-    filter: '港'
+    filter: '港|hk|hong'
    #disable-udp: true
 
   - name: "Manual"
@@ -412,7 +412,7 @@ proxy-groups:
     type: url-test
     use:
      - SSRCLOUD CNIX
-    filter: '台湾|TW'
+    filter: '台湾|TW|taiwan'
     url: 'http://www.tiktok.com/@minami_aizawa_'
     interval: 900
     tolerance: 50  
@@ -454,7 +454,7 @@ proxy-groups:
     strategy: round-robin
     use:
      - SSRCLOUD CNIX
-    #filter: '日IEPL|日IPLC'
+    filter: '^(?!.*(日|Japan|jp))'
     url: 'http://www.gstatic.com/generate_204'
     interval: 900
     tolerance: 50 
@@ -464,7 +464,7 @@ proxy-groups:
     strategy: round-robin
     use:
      - SSRCLOUD CNIX
-    filter: '日IEPL|日IPLC'
+    filter: '日|Japan|jp'
     url: 'http://dmm.co.jp'
     interval: 900
     tolerance: 50 
@@ -483,7 +483,7 @@ proxy-groups:
       - DIRECT
     use:
       - SSRCLOUD CNIX
-    filter: "台湾|TW"
+    filter: "台湾|TW|taiwan"
   
   # 外服游戏
   - name: "🎮online game"
@@ -491,7 +491,7 @@ proxy-groups:
     use:
       - SSRCLOUD CNIX 
       - WestData
-    filter: '游戏'
+    filter: '游戏|game'
 
   # 白名单模式 PROXY, 黑名单模式 DIRECT, 不知道别动
   - name: "DST-PORT"
@@ -749,7 +749,10 @@ rules:
     - RULE-SET,private,DIRECT
     # DOMAIN DIRECT
     - RULE-SET,BILIBILIHMT_domain,Bilibili国台 #proxy group
-
+    
+    # localtunnel 
+    - DOMAIN-SUFFIX,loca.lt,DIRECT
+    
     - RULE-SET,bt-trackers,DIRECT
    
     - RULE-SET,Microsoft,DIRECT
