--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -377,24 +377,6 @@ proxy-groups:
       - main(load-balance)
       - backup(load-balance)
 
-  - name: "main(load-balance)"
-    type: load-balance
-    strategy: consistent-hashing
-    use:    
-      - Airport A
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-    lazy: true
-
-  - name: "backup(load-balance)"
-    type: load-balance
-    strategy: round-robin
-    use:    
-      - Airport B 
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-    lazy: true
-
   - name: "main (Manual)"
     type: select
     use:    
@@ -433,11 +415,7 @@ proxy-groups:
     type:  select
     proxies:
      - e-hentai auto
-     - DIRECT
-    use:
-     - Airport A
-     - Airport B 
-    #filter: '美国'
+     - Manual
 
   - name: "e-hentai auto"
     type: load-balance
