--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -263,7 +263,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: http://www.gstatic.com/generate_204
+      url: https://www.gstatic.com/generate_204
   
 
   Airport B:      
@@ -274,7 +274,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: http://www.gstatic.com/generate_204    
+      url: https://www.gstatic.com/generate_204    
  
   #MIXED US:      
   #  type: http
