add online game rules

--- a/Clash config/georule.yaml
+++ b/Clash config/georule.yaml
@@ -450,6 +450,13 @@ rule-providers:
     url: https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Proxy.yaml
     interval: 86400 
 
+  🎮online game:
+    type: http
+    behavior: ipcidr
+    path: ./RuleSet/Extra/onlinegame.yaml
+    url: https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/onlinegame.yaml
+    interval: 86400  
+    
 rules:
   
   - GEOSITE,private,DIRECT
