--- a/Clash config/georule.yaml
+++ b/Clash config/georule.yaml
@@ -410,6 +410,7 @@ proxy-providers:
     type: http
     url: 
     interval: 3600
+    filter: "^((?!(官网|漏洞|倒卖)).)*$"
     path: "./proxy_provider/main.yaml"
     health-check:
       enable: true
