--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -48,3 +48,4 @@
   - DOMAIN-SUFFIX,hk1lib.org
   - DOMAIN-SUFFIX,chkaja.com
   - DOMAIN-SUFFIX,hxcy.moe
+  - DOMAIN,1dot1dot1dot1.cloudflare-dns.com
