--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -32,7 +32,7 @@ update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6
 网易云音乐 = select,🎵 网易云音乐
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
-main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=港
+main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=(香港)|(hk)|(hong)
 backup(Auto) = url-test,Cordcloud,use=true,policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,SSRCLOUD CNIX,use=true
