--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -37,7 +37,6 @@ backup(Auto) = url-test,Cordcloud,use=true,policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,SSRCLOUD CNIX,use=true
 backup (Manual) = select,Cordcloud,use=true
-Bilibili国台 = select,DIRECT,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
 TikTok = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
 DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 
@@ -50,12 +49,11 @@ RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMu
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Microsoft_domain.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Apple_domain.yaml,DIRECT
 DOMAIN-KEYWORD,dmm,DMM
-DOMAIN-SUFFIX,javdb.com,✈️PROXY
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Proxy.yaml,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/domestic.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Tiktok_domain.yaml,TIKTOK
-RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/BilibiliHMT_domain.yaml,Bilibili国台
+RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/BilibiliHMT_domain.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,DIRECT,no-resolve
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Telegram_ip.yaml,✈️PROXY,no-resolve
 GEOIP,CN,DIRECT
